<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".My_Acts.PatientPage"
    android:orientation="vertical">

<Space
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>


    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical">


        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/background"
            android:src="@drawable/background_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textstatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="start"
                android:text="@string/curentstatus"
                android:textSize="40sp"

                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/patientpagehrate"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textSize="60dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:text="@string/bpm"
                android:textSize="30sp"
                android:textStyle="bold" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="2" />


        <TextView
            android:id="@+id/patientpagestavalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="no data"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold"/>



        <Space
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:layout_weight="2" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"

            >


            <ImageView
                android:id="@+id/histrecored"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"

                android:src="@drawable/historyrecord" />


            <ImageView
                android:id="@+id/ownprofile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:src="@drawable/myownprofile" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"

            >


            <TextView
                android:id="@+id/ownprofile2345"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="  سجلي"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/mypro23"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text=" ملفي"

               />




        </LinearLayout>

    </LinearLayout>
</LinearLayout>