<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".My_Acts.PatientProfile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textcancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelabel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="0.5"
            android:gravity="start"
            />


        <TextView
            android:id="@+id/textdone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donelabel"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight="0.5"
            android:gravity="end"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_icon"
        android:layout_marginTop="40dp"
        android:layout_weight="0.3"
        android:layout_gravity="center"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView

            android:id="@+id/pprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patientProfile"
            android:textSize="25sp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:contentDescription="@string/person"
            android:src="@drawable/person" />






    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/textViewpname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="start"
            android:textStyle="bold"
            android:text="Name:"
            android:textFontWeight="1"
            android:textSize="30sp" />


        <EditText
            android:id="@+id/editTextpname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_weight="1"

            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textViewage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="start"
            android:textStyle="bold"
            android:textFontWeight="1"
            android:text="Age:"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/textViewaddress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="start"
            android:textStyle="bold"
            android:textFontWeight="1"
            android:text="Address:"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textViewnatiunality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="start"
            android:textStyle="bold"
            android:textFontWeight="1"
            android:text="Nationality:"
            android:textSize="30sp" />



        <EditText
            android:id="@+id/editTextnatiunality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName"
            />


    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            />

        <TextView
            android:id="@+id/textViewemergincy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="start"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light"
            android:text="Emergency Contact"
            android:textSize="27sp" />


        <TextView
            android:id="@+id/emrconcatname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textStyle="bold"
            android:text="Name"
            android:textSize="20sp" />





        <EditText
            android:id="@+id/emrname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
/>



        <TextView
            android:id="@+id/emrconcatnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="start"
            android:textStyle="bold"
            android:text="Phone #"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/emrmobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/premove"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/deletebtn"/>

        <ImageView
            android:id="@+id/pedit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/editbtn"/>

    </LinearLayout>


</LinearLayout>


